# game-engine

./: .gitmodules  CMakeLists.txt
res/shaders/: frag.glsl  vert.glsl
shaders/: frag.glsl  vert.glsl
src/: CMakeLists.txt  main.cpp  util.cpp  util.h
src/gl/: model.cpp  model.h  obj.cpp  obj.h  primitive_gen.cpp  primitive_gen.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.h  vec.h
